fix emoji picker z-index

--- a/src/client/components/comment/CommentForm/CommentForm.sass
+++ b/src/client/components/comment/CommentForm/CommentForm.sass
@@ -44,3 +44,4 @@
     position: absolute
     right: 0
     top: calc(100% + #{$spacing-xs})
+    z-index: $z-index-dropdown
