--- a/src/client/styles/settings/layout.sass
+++ b/src/client/styles/settings/layout.sass
@@ -8,5 +8,6 @@ $sidebar-width: 250px
 
 $z-index-content: 1
 $z-index-sidebar: 2
-$z-index-navbar: 3
+$z-index-dropdown: 3
+$z-index-navbar: 4
 $z-index-modal: 5
